[package]
name = "simple_async_executor"
version = "0.1.0"
authors = ["zhangpanweb <zhangpanweb@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
anyhow = "1.0.31"
reqwest = { version = "0.10.4", features = ["blocking"] }
